k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: spring-practice
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: robertp22/chat:0.0.1
#        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "2"
        securityContext:
          allowPrivilegeEscalation: false
          #runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 240
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 240
          periodSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: spring-practice
spec:
  selector:
    app: chat
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
