k8s/springjpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springjpa
  namespace: spring-practice
  labels:
    app: springjpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springjpa
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: springjpa
    spec:
      containers:
      - name: springjpa
        image: robertp22/springjpa:0.0.1
        #imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "2"
        securityContext:
          allowPrivilegeEscalation: false
          #runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: springjpa
  namespace: spring-practice
spec:
  selector:
    app: springjpa
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
